--- a/src/app/events/events-list.component.html
+++ b/src/app/events/events-list.component.html
@@ -1,5 +1,9 @@
 <div>
   <h1>Upcoming Angular Events</h1>
   <hr>
-  <app-event-thumbnail #thumbnail [event]="event"></app-event-thumbnail>
+  <div class="row">
+    <div class="col-md-6" *ngFor="let event of events">
+      <app-event-thumbnail #thumbnail [event]="event"></app-event-thumbnail>
+    </div>
+  </div>
 </div>
