--- a/src/app/nav/navbar.component.html
+++ b/src/app/nav/navbar.component.html
@@ -9,9 +9,9 @@
         <li>
           <a [routerLink]="['/events']">All Events</a>
         </li>
-        <li><a href="">Create Event</a></li>
+        <li><a [routerLink]="['/events/new']">Create Event</a></li>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" >
+          <a class="dropdown-toggle" data-toggle="dropdown" >
             Events
             <span class="caret"></span>
           </a>
@@ -25,7 +25,8 @@
       <div class="navbar-header navbar-right">
         <ul class="nav navbar-nav">
           <li>
-            <a>Welcome John</a>
+            <a [routerLink]="['/user/login']" *ngIf="!auth.isAuthenticated()">Login</a>
+            <a [routerLink]="['/user/profile']"*ngIf="auth.isAuthenticated()">{{auth?.currentUser.firstName}}</a>
           </li>
         </ul>
       </div>
