--- a/src/app/events/event-detail/event-detail.html
+++ b/src/app/events/event-detail/event-detail.html
@@ -21,4 +21,21 @@
       </address>
     </div>
   </div>
+
+  <hr>
+
+  <div class="row">
+    <div class="col-md-2">
+      <h3 style="margin:0">Session</h3>
+    </div>
+
+    <div class="col-md-2">
+      <a (click)="addSession()" >Add Session</a>
+    </div>
+  </div>
+
+  <app-session-list [sessions]="event?.sessions" *ngIf="!addMode"></app-session-list>
+
+  <app-create-session *ngIf="addMode" (saveNewSession)="saveNewSession($event)" (cancelSession)="cancelSession()"></app-create-session>
+
 </div>
