--- a/src/app/events/event-detail/session-list/session-list.component.html
+++ b/src/app/events/event-detail/session-list/session-list.component.html
@@ -1,6 +1,6 @@
-<div class="row" *ngFor="let session of sessions">
-  <div class="col-md-10">
-    <app-collapsible-well>
+<div class="row" *ngFor="let session of visibleSessions">
+  <div class="col-md-12">
+    <app-collapsible-well >
       <div well-title>
         {{session.name}}
         <i *ngIf="session?.voters?.length !== 0" class="glyphicon glyphicon-fire" style="color:red"></i>
@@ -10,6 +10,17 @@
         <span>Duration: {{session.duration}}</span><br />
         <span>Level: {{session.level}}</span>
         <p>{{session.abstract}}</p>
+      </div>
+    </app-collapsible-well>
+
+  </div>
+</div>
+
+<div class="row" *ngIf="visibleSessions.length === 0">
+  <div class="col-12">
+    <app-collapsible-well >
+      <div well-title>
+        No Data Found
       </div>
     </app-collapsible-well>
   </div>
