--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,7 @@
+* {
+  outline: none !important;
+}
+
 /* You can add global styles to this file, and also import other style files */
 .hoverwell:hover {
   background-color: #485563;
@@ -35,4 +39,21 @@ button {
 
 .pointer {
   cursor: pointer;
+}
+
+.mt-5 {
+  margin-top: 5px;
+}
+
+.mb-5 {
+  margin-bottom: 5px;
+}
+
+.mb-10 {
+  margin-bottom: 10px;
+}
+
+.mx-10 {
+  margin-left: 10px;
+  margin-right: 10px;
 }
