--- a/src/app/nav/navbar.component.html
+++ b/src/app/nav/navbar.component.html
@@ -30,14 +30,22 @@
           </li>
         </ul>
       </div>
-      <form id="searchForm"  class="navbar-form navbar-right"  >
+      <form id="searchForm" (ngSubmit)="searchSession(searchTerm)"  class="navbar-form navbar-right"  >
         <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search Sessions" >
+          <input type="text" [(ngModel)]="searchTerm" name="searchTerm" class="form-control" placeholder="Search Sessions" >
         </div>
-        <button class="btn btn-default" >
+        <button class="btn btn-default" type="submit" modal-trigger>
           Search
         </button>
       </form>
     </div>
   </div>
 </div>
+
+<app-simple-modal title="Matching Sessions">
+  <div class="lis-group">
+    <a [routerLink]="['/event', session.id]" class="lidt-group-item" *ngFor="let session of foundSessions">
+      {{session.name}}
+    </a>
+  </div>
+</app-simple-modal>
