--- a/src/app/common/simple-modal/simple-modal.component.html
+++ b/src/app/common/simple-modal/simple-modal.component.html
@@ -1,14 +1,14 @@
-<div id="simple-modal" class="modal fade" tab-index="-1">
+<div id="simple-modal" #modalContainer class="modal fade" tab-index="-1">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <button type="button" class="close">
-          <i class="glyohicons glyphicons-times"></i>
+        <button type="button" class="close" (click)="closeModal()">
+          <i class="glyphicon glyphicon-remove"></i>
         </button>
         <h4 class="modal-title">{{title}}</h4>
       </div>
-      <div class="modal-body">
-        <ng-content select="selector"></ng-content>
+      <div class="modal-body" (click)="closeModal()">
+        <ng-content></ng-content>
       </div>
     </div>
   </div>
