feat(sesion-list): User vote login modal

--- a/src/app/common/simple-modal/simple-modal.component.html
+++ b/src/app/common/simple-modal/simple-modal.component.html
@@ -1,4 +1,4 @@
-<div id="simple-modal" #modalContainer class="modal fade" tab-index="-1">
+<div [id]="idModal" #modalContainer class="modal fade" tab-index="-1">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
