--- a/src/app/events/create-event/create-event.component.html
+++ b/src/app/events/create-event/create-event.component.html
@@ -23,9 +23,10 @@
       <input (ngModel)="newEven.price" name="price" required id="eventPrice" type="text" type="number" class="form-control" placeholder="event price..." />
     </div>
 
-    <div ngModelGroup="location">
+    <div ngModelGroup="location" #locationGroup ="ngModelGroup" appLocationValidator>
       <div class="form-group">
         <label for="address">Event Location:</label>
+        <em *ngIf="locationGroup?.touched && locationGroup?.invalid">Must fill the full location or online URL</em>
         <input (ngModel)="newEven.location.address" name="address" id="address" type="text" class="form-control" placeholder="Address of event..." />
       </div>
       <div class="row">
@@ -40,7 +41,7 @@
 
     <div class="form-group">
       <label for="onlineUrl">Online Url:</label>
-      <input (ngModel)="newEven.onlineUrl" name="onlineUrl" id="onlineUrl" type="text" class="form-control" placeholder="Online Url..." />
+      <input (ngModel)="newEven.onlineUrl" (change)="locationGroup.control.controls['address'].updateValueAndValidity()"name="onlineUrl" id="onlineUrl" type="text" class="form-control" placeholder="Online Url..." />
     </div>
     <div class="form-group" [ngClass]="{'error': newEventForm.controls['imageUrl']?.invalid && newEventForm.controls['imageUrl']?.touched}">
       <label for="imageUrl">Image:</label>
@@ -50,7 +51,7 @@
       <img />
     </div>
 
-    <button type="submit" class="btn btn-primary">Save</button>
-    <button type="button" [disabled]="newEventForm.invalid" class="btn btn-default" (click)="cancel()">Cancel</button>
+    <button type="submit" [disabled]="newEventForm.invalid" class="btn btn-primary">Save</button>
+    <button type="button" class="btn btn-default" (click)="cancel()">Cancel</button>
   </form>
 </div>
